syntax = "proto3";

package MERCHANT_PACKAGE;

import "address.proto";
import "user.proto";
import "shared/enum.proto";
import "shared/core.proto";

service MerchantService {
    rpc CreateMerchant(CreateMerchantDto) returns (MerchantReturn){}
    rpc TmpTst(Empty) returns (TstReturn){}
}

message Merchant {
    string name = 1;
    string mail = 2;
    string mobileNo = 3;
    shared.ESubscription subscriptionType = 4;
    shared.EStatus status = 5;
    ADDRESS_PACKAGE.Address address = 6;
    shared.Category category = 7;
    USER_PACKAGE.User user = 8;
}

message CreateMerchantDto {
    string name = 1;
    string mail = 2;
    string mobileNo = 3;
    optional shared.ESubscription subscriptionType = 4;
    ADDRESS_PACKAGE.CreateAddressDto address = 5;
    shared.CategoryDto category = 6;
    USER_PACKAGE.CreateUserDto user = 7;
}

message Empty {}

message TstReturn {
    string data = 1;
}

message MerchantReturn {
    Merchant data = 1;
}

